# ros-tangent-bug-navigation

./: .gitignore  CMakeLists.txt  docker-compose.yml  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  params.yaml
config/rviz/: rviz.rviz
docker/sdf2pgm/: Dockerfile  docker-compose.yml  frames.gv
docker/sdf2pgm/robot_ws/install/: local_setup.sh  setup.sh
docker/sdf2pgm/robot_ws/install/gazebo_map_creator/share/ament_index/resource_index/package_run_dependencies/: gazebo_map_creator
docker/sdf2pgm/robot_ws/install/gazebo_map_creator/share/ament_index/resource_index/parent_prefix_path/: gazebo_map_creator
docker/sdf2pgm/robot_ws/install/gazebo_map_creator/share/gazebo_map_creator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
docker/sdf2pgm/robot_ws/install/gazebo_map_creator/share/gazebo_map_creator/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  gazebo_map_creatorConfig-version.cmake  gazebo_map_creatorConfig.cmake
docker/sdf2pgm/robot_ws/install/gazebo_map_creator/share/gazebo_map_creator/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
docker/sdf2pgm/robot_ws/install/gazebo_map_creator/share/gazebo_map_creator/scripts/: request_map.py
docker/sdf2pgm/robot_ws/install/gazebo_map_creator_interface/include/gazebo_map_creator_interface/gazebo_map_creator_interface/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
docker/sdf2pgm/robot_ws/install/gazebo_map_creator_interface/include/gazebo_map_creator_interface/gazebo_map_creator_interface/srv/: map_request.h  map_request.hpp
docker/sdf2pgm/robot_ws/install/gazebo_map_creator_interface/share/gazebo_map_creator_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
docker/sdf2pgm/robot_ws/install/gazebo_map_creator_interface/share/gazebo_map_creator_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_gazebo_map_creator_interface__rosidl_generator_cExport-noconfig.cmake  export_gazebo_map_creator_interface__rosidl_generator_cExport.cmake  export_gazebo_map_creator_interface__rosidl_generator_cppExport.cmake  export_gazebo_map_creator_interface__rosidl_generator_pyExport-noconfig.cmake  export_gazebo_map_creator_interface__rosidl_generator_pyExport.cmake  export_gazebo_map_creator_interface__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_gazebo_map_creator_interface__rosidl_typesupport_fastrtps_cExport.cmake  export_gazebo_map_creator_interface__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_gazebo_map_creator_interface__rosidl_typesupport_fastrtps_cppExport.cmake  gazebo_map_creator_interfaceConfig-version.cmake  gazebo_map_creator_interfaceConfig.cmake  gazebo_map_creator_interface__rosidl_typesupport_cExport-noconfig.cmake  gazebo_map_creator_interface__rosidl_typesupport_cExport.cmake  gazebo_map_creator_interface__rosidl_typesupport_cppExport-noconfig.cmake  gazebo_map_creator_interface__rosidl_typesupport_cppExport.cmake  gazebo_map_creator_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  gazebo_map_creator_interface__rosidl_typesupport_introspection_cExport.cmake  gazebo_map_creator_interface__rosidl_typesupport_introspection_cppExport-noconfig.cmake  gazebo_map_creator_interface__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
docker/sdf2pgm/robot_ws/install/gazebo_map_creator_interface/share/gazebo_map_creator_interface/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
docker/sdf2pgm/robot_ws/install/gazebo_map_creator_interface/share/gazebo_map_creator_interface/srv/: MapRequest.idl  MapRequest.srv  MapRequest_Request.msg  MapRequest_Response.msg
docker/sdf2pgm/robot_ws/log/: latest_build
docker/sdf2pgm/robot_ws/maps/map1/: world.bt  world.pgm  world.sdf  world.yaml
docker/sdf2pgm/robot_ws/maps/map10/: world.bt  world.sdf
docker/sdf2pgm/robot_ws/maps/map2/: world.sdf
docker/sdf2pgm/robot_ws/maps/map3/: world.bt  world.sdf
docker/sdf2pgm/robot_ws/maps/map4/: world.bt  world.sdf
docker/sdf2pgm/robot_ws/maps/map6/: world.pgm  world.sdf
docker/sdf2pgm/robot_ws/maps/map7/: world.pgm
docker/sdf2pgm/robot_ws/maps/map8/: world.pgm
launch/: gazebo_simulation.launch  mapa_stl.launch  navigation_test.launch  tangent_bug_test.launch
maps/map10/: world.pgm
maps/map2/: world.bt  world.pgm
maps/map3/: world.pgm
maps/map4/: world.pgm
maps/map5/: world.bt  world.pgm  world.sdf
maps/map6/: world.bt
maps/map7/: world.bt  world.sdf
maps/map8/: world.bt  world.sdf
maps/map9/: world.bt  world.pgm  world.sdf
models/map/: model.sdf
models/map/meshes/: map.stl
scripts/python/: convert_sdf_to_pgm_yaml.py  gen_maze_DFS.py  gerar_mapa.py  gerar_mapa_sdf.py
src/: TangentBug.cpp  TangentBug.h  main.cpp  tangent_bug_2dnav.cpp
src/utils/: tangentbug_utils.cpp  tangentbug_utils.h
test/: test_detect_obstacle_boundaries.cpp  test_extract_obstacle_segments.cpp  test_find_best_segment_toward_goal.cpp  test_find_closest_endpoint.cpp  test_offset_segment_toward_robot.cpp  test_offset_segment_toward_robot_perspective.cpp  test_simplify_segment.cpp  test_tangentbug.cpp
urdf/models/goal_marker/: goal.sdf
worlds/: mapa.world
worlds/model1/: model.config  model.sdf
worlds/teste/: model.config  model.sdf
(+14 files in other folders)
