<package format="2">
  <name>tangent_bug_2dnav</name>
  <version>0.0.0</version>
  <description>The tangent_bug_2dnav package</description>

  <maintainer email="ghboliveira@hotmail.com">Gustavo Henrique</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
